changed the code of ThreeBackground.jsx tp add some extra functionality ,make the animation better

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-plugin-glsl": "^1.0.0",
     "framer-motion": "^11.0.17",
     "gl-matrix": "^3.4.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
