--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.8.9",
     "regl": "^2.1.1",
