--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.8.9",
+    "react-type-animation": "^3.2.0",
     "regl": "^2.1.1",
     "three": "^0.177.0",
     "vite-plugin-glsl": "^1.4.2"
