--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
-    "react-scroll": "^1.8.9",
+    "react-scroll": "^1.9.3",
     "react-type-animation": "^3.2.0",
     "regl": "^2.1.1",
     "three": "^0.177.0",
