--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "abhinav_portfolio": "file:../AJ_PORTFOLIO_full",
     "babel-plugin-glsl": "^1.0.0",
-    "framer-motion": "^11.0.17",
+    "framer-motion": "^11.18.2",
     "gl-matrix": "^3.4.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
+    "react-parallax-tilt": "^1.7.299",
     "react-scroll": "^1.9.3",
     "react-type-animation": "^3.2.0",
     "regl": "^2.1.1",
